--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="ru">
 <head>
   <meta charset="utf-8">
-  <meta property="og:title" content="forma comprobada">
+  <meta property="og:title" content="like">
 <meta property="og:description" content="">
-<meta property="og:image" content="https://i.ibb.co/LdX1sHX/5-cm-dalam-12-hari-86.png">
+<meta property="og:image" content="https://static.thousandwonders.net/Blenheim.Palace.original.28367.jpg">
   <title>New Promotion</title>
   <meta name="description" content="Cold">
   <meta name="keywords" content="Nutrition">
